# stribolith

./: .gitignore  Cargo.toml  README.md  build.rs  justfile  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/stribolith/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  router.dart
lib/components/: gnss_data_widget.dart  layout.dart
lib/pages/: piscope.dart
lib/pages/piscope/: gnss_raw.dart  orientation_raw.dart  pi_scope_list.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/hub/: Cargo.toml  build.rs
native/hub/src/: lib.rs
native/hub/src/actors/: mod.rs  pi_scope.rs
native/hub/src/signals/: mod.rs
proto/: open-pi-scope.proto
src/: main.rs  mutex_box.rs
src/actors/: event_bus.rs  gui_handler.rs  mod.rs  pi_scope.rs
src/signals/: mod.rs
test/: widget_test.dart
ui/: app-window.slint  pi-scope.slint
ui/components/: gnss-data.slint
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
