[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
rinf = "8.0.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = [ "macros", "time","rt-multi-thread"] }
async-trait = "0.1.87"
messages = "0.3.1"
tonic = "0.13.0"
prost = "0.13"
xactor = { version = "0.7.11", default-features = false, features = ["runtime-tokio"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.13.0"
# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.8.1", features = ["rt", "macros", "time"] }
# wasm-bindgen = "0.2.100"
